# Deprecated_cpr_mover

./: CMakeLists.txt  README.md  package.xml
include/: CANInterfacePCAN.h  ProtocolCPRCAN.h  cpr_mover.h  kinematics.h
src/: CANInterfacePCAN.cpp  ProtocolCPRCAN.cpp  cpr_mover.cpp  kinematics.cpp
