<?xml version="1.0"?>
<package>
  <name>cpr_mover</name>
  <version>0.1.0</version>
  <description>Driver for the Commonplace Robotics Mover4 and Mover6 robot arms</description>

  <maintainer email="crm@cpr-robots.com">Christian Meyer</maintainer>
  <license>BSD</license>

  <url type="website">http://www.cpr-robots.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
<build_depend>actionlib</build_depend>
<build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
<run_depend>actionlib</run_depend>
<run_depend>actionlib_msgs</run_depend>


  
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
